--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- style css -->
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     <title>smile</title>
 </head>
 
@@ -42,10 +43,10 @@
         <div class="container">
             <div class="header-top">
                 <!-- logo -->
-                <a href="./"> <img src="./assets/img/Logo_d.svg" alt="" class="logo"></a>
+                <a href="./"> <img src="./assets/img/Logo_d.svg" alt="" class="logo header__logo"></a>
                 <!-- navbar -->
                 <nav class="navbar">
-                    <ul class="navbar__list">
+                    <ul class="navbar__list" id="navbar__list--pc">
                         <li class="navbar__item">
                             <a href="#!" class="navbar__link navbar__link--active">Home</a>
                         </li>
@@ -92,6 +93,57 @@
         </div>
     </header>
 
+    <!-- tablet&mobile header -->
+    <div class="mobile-header">
+        <!-- tablet/mobile menu -->
+        <input type="checkbox" name="menu-checkbox" id="menu-checkbox" class="menu-checkbox" hidden>
+        <label for="menu-checkbox">
+            <svg class="menu-header__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                <path fill="currentColor"
+                    d="M96 160C96 142.3 110.3 128 128 128L512 128C529.7 128 544 142.3 544 160C544 177.7 529.7 192 512 192L128 192C110.3 192 96 177.7 96 160zM96 320C96 302.3 110.3 288 128 288L512 288C529.7 288 544 302.3 544 320C544 337.7 529.7 352 512 352L128 352C110.3 352 96 337.7 96 320zM544 480C544 497.7 529.7 512 512 512L128 512C110.3 512 96 497.7 96 480C96 462.3 110.3 448 128 448L512 448C529.7 448 544 462.3 544 480z" />
+            </svg>
+        </label>
+
+        <!-- overlay -->
+        <label for="menu-checkbox" class="menu-overlay">
+        </label>
+
+        <!-- menu-content -->
+        <div class="menu-drawer">
+            <!-- menu top -->
+            <div class="menu-drawer__top">
+                <a href="./"> <img src="./assets/img/Logo_d.svg" alt="" class="logo"></a>
+                <label for="menu-checkbox">
+                    <svg class="close__menu" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640">
+                        <path fill="currentColor"
+                            d="M183.1 137.4C170.6 124.9 150.3 124.9 137.8 137.4C125.3 149.9 125.3 170.2 137.8 182.7L275.2 320L137.9 457.4C125.4 469.9 125.4 490.2 137.9 502.7C150.4 515.2 170.7 515.2 183.2 502.7L320.5 365.3L457.9 502.6C470.4 515.1 490.7 515.1 503.2 502.6C515.7 490.1 515.7 469.8 503.2 457.3L365.8 320L503.1 182.6C515.6 170.1 515.6 149.8 503.1 137.3C490.6 124.8 470.3 124.8 457.8 137.3L320.5 274.7L183.1 137.4z" />
+                    </svg>
+                </label>
+            </div>
+            <!-- nav mobile -->
+            <ul id="navbar__list--mobile">
+            </ul>
+
+            <script>
+                const navPc = document.querySelector("#navbar__list--pc");
+                const navMobile = document.querySelector("#navbar__list--mobile");
+
+                navMobile.innerHTML = navPc.innerHTML;
+            </script>
+
+            <div class="separate"></div>
+            <!-- cta action -->
+            <div class="show-on-mobile">
+                <li class="navbar__item">
+                    <a href="#!" class="navbar__link">Log In</a>
+                </li>
+                <li class="navbar__item">
+                    <a href="#!" class="navbar__link">Sign Up</a>
+                </li>
+            </div>
+        </div>
+    </div>
+
     <!-- main -->
     <main class="main">
         <!-- out service -->
@@ -103,7 +155,8 @@
 
                 <div class="service__row">
                     <!-- servie-left -->
-                    <figure><img src="./assets/img/ourservice1.jpg" alt="Our services" class="service__img" data-aos="zoom-in"></figure>
+                    <figure><img src="./assets/img/ourservice1.jpg" alt="Our services" class="service__img"
+                            data-aos="zoom-in"></figure>
                     <!-- service-right -->
                     <div class="service__list">
                         <!-- item1 -->
@@ -208,7 +261,8 @@
                     <div class="about__media">
                         <figure class="about__images">
                             <img src="./assets/img/bghoa.jpg" alt="" class="about__img--big" data-aos="fade-down-right">
-                            <img src="./assets/img/about2.jpg" alt="" class="about__img--small" data-aos="fade-down-right">
+                            <img src="./assets/img/about2.jpg" alt="" class="about__img--small"
+                                data-aos="fade-down-right">
                         </figure>
                     </div>
                     <!-- about left -->
@@ -234,7 +288,8 @@
                     <!-- item1 -->
                     <article class="team-item">
                         <div class="team-item__img-bg">
-                            <img src="./assets/img/snapedit_1752943439080.png" alt="" class="team-item__thumb" data-aos="fade-up">
+                            <img src="./assets/img/snapedit_1752943439080.png" alt="" class="team-item__thumb"
+                                data-aos="fade-up">
                         </div>
                         <h3 class="team-item__name">Dr. Essence Page</h3>
                         <p class="team-item__desc">DDS, California - Linda University</p>
@@ -243,7 +298,8 @@
                     <!-- item2 -->
                     <article class="team-item">
                         <div class="team-item__img-bg">
-                            <img src="./assets/img/snapedit_1752943380478.png" alt="" class="team-item__thumb" data-aos="fade-up">
+                            <img src="./assets/img/snapedit_1752943380478.png" alt="" class="team-item__thumb"
+                                data-aos="fade-up">
                         </div>
                         <h3 class="team-item__name">Dr. Essence Page</h3>
                         <p class="team-item__desc">DDS, California - Linda University</p>
@@ -252,7 +308,8 @@
                     <!-- item3 -->
                     <article class="team-item">
                         <div class="team-item__img-bg">
-                            <img src="./assets/img/snapedit_1752943241370.png" alt="" class="team-item__thumb" data-aos="fade-up">
+                            <img src="./assets/img/snapedit_1752943241370.png" alt="" class="team-item__thumb"
+                                data-aos="fade-up">
                         </div>
                         <h3 class="team-item__name">Dr. Essence Page</h3>
                         <p class="team-item__desc">DDS, California - Linda University</p>
@@ -261,7 +318,8 @@
                     <!-- item4 -->
                     <article class="team-item">
                         <div class="team-item__img-bg">
-                            <img src="./assets/img/snapedit_1752943167746.png" alt="" class="team-item__thumb" data-aos="fade-up">
+                            <img src="./assets/img/snapedit_1752943167746.png" alt="" class="team-item__thumb"
+                                data-aos="fade-up">
                         </div>
                         <h3 class="team-item__name">Dr. Essence Page</h3>
                         <p class="team-item__desc">DDS, California - Linda University</p>
@@ -400,7 +458,7 @@
                         dentist.</p>
                 </div>
                 <!-- column2 -->
-                <div class="footer__column">
+                <div class="footer__column  footer-hidden-tablet">
                     <h3 class="footer__heading">Support</h3>
                     <ul class="footer__list">
                         <li class="footer__item"><a class="footer__link" href="#!">Help center</a></li>
